--- a/services/auth/serverless.yml
+++ b/services/auth/serverless.yml
@@ -1,4 +1,4 @@
-service: notes-app-mono-auth
+service: localhost-app-mono-auth
 
 custom:
   # Our stage is based on what is passed in when running serverless
@@ -49,7 +49,7 @@ resources:
               Ref: CognitoUserPoolClient
             ProviderName:
               Fn::GetAtt: [ "CognitoUserPool", "ProviderName" ]
-              
+
     # IAM roles
     CognitoIdentityPoolRoles:
       Type: AWS::Cognito::IdentityPoolRoleAttachment
@@ -59,7 +59,7 @@ resources:
         Roles:
           authenticated:
             Fn::GetAtt: [CognitoAuthRole, Arn]
-            
+
     # IAM role used for authenticated users
     CognitoAuthRole:
       Type: AWS::IAM::Role
@@ -90,7 +90,7 @@ resources:
                     - 'cognito-sync:*'
                     - 'cognito-identity:*'
                   Resource: '*'
-                
+
                 # Allow users to invoke our API
                 - Effect: 'Allow'
                   Action:
@@ -106,7 +106,7 @@ resources:
                         - ':'
                         - 'Fn::ImportValue': ${self:custom.stage}-ApiGatewayRestApiId
                         - '/*'
-                
+
                 # Allow users to upload attachments to their
                 # folder inside our S3 bucket
                 - Effect: 'Allow'
