--- a/services/uploads/serverless.yml
+++ b/services/uploads/serverless.yml
@@ -1,4 +1,4 @@
-service: notes-app-mono-uploads
+service: localhost-app-mono-uploads
 
 custom:
   # Our stage is based on what is passed in when running serverless
@@ -47,4 +47,3 @@ resources:
         Ref: S3Bucket
       Export:
         Name: ${self:custom.stage}-AttachmentsBucket
-
